# agui-cli

./: .gitignore  README.md  pyproject.toml
agui_cli/: __init__.py  cli.py  client.py
